<resources>
    <string name="app_name">Ultra konwerter</string>
    <string name="action_settings">Settings</string>
    <string name="result">Result</string>
    <string name="convert">Convert</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome to UltraConverter!!</string>
    <string name="kg_to_lb">Kg to Lbs</string>
    <string name="g_to_oz">Gram to Oz</string>
    <string name="kg_to_st">Kg to stone</string>
    <string name="st_to_kg">stone to kg</string>
    <string name="lbs_to_kg">Lbs to kg</string>
    <string name="oz_to_g">Oz to gram</string>
    <string name="input_data">input data</string>
    <string name="f_to_cels">F to Cels</string>
    <string name="foot2_to_m2">Foot2 to m2</string>
    <string name="gal_to_lit">Gal to lit</string>
    <string name="lit_to_gal">Lit to Gal</string>
    <string name="cels_to_far">Cels To Far</string>
    <string name="m2_to_feet2">m2 to feet2</string>
    <string name="m2_to_foot2">m2 to foot2</string>
    <string name="mile_to_km">mile to km</string>
    <string name="yard_to_m">yard to m</string>
    <string name="foot_to_cm">foot to cm</string>
    <string name="inch_to_cm">inch to cm</string>
    <string name="cm_to_inch">cm to inch</string>
    <string name="km_to_mile">km to mile</string>
    <string name="m_to_yard">M to yard</string>
    <string name="euro_to_funky">Euro to funky</string>
    <string name="funky_to_euro">Funky to euro</string>



</resources>
