<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/miara"
    tools:context=".ToFunkyActivity">

    <Button
        android:id="@+id/litToGalBtn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/lit_to_gal"
        app:layout_constraintEnd_toStartOf="@+id/celsToFarBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kgToLbsBtn" />

    <Button
        android:id="@+id/gramToOzBtn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/g_to_oz"
        app:layout_constraintEnd_toStartOf="@+id/lbsToKgBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/kgToLbsBtn"
        app:layout_constraintTop_toBottomOf="@+id/wynik" />

    <Button
        android:id="@+id/kgToLbsBtn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/kg_to_lb"
        app:layout_constraintEnd_toStartOf="@+id/gramToOzBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wynik" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/euro_to_funky"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toStartOf="@+id/resetButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="148dp"
        android:layout_height="55dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/wpisText"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:hint="@string/input_data"
            android:inputType="numberDecimal" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/wynik"
        android:layout_width="151dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/result"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/lbsToKgBtn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="48dp"
        android:text="@string/kg_to_st"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/gramToOzBtn"
        app:layout_constraintTop_toBottomOf="@+id/wynik" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:onClick="reset"
        android:text="@string/reset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/welcome"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/celsToFarBtn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/cels_to_far"
        app:layout_constraintEnd_toStartOf="@+id/m2ToFeet2Btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/litToGalBtn"
        app:layout_constraintTop_toBottomOf="@+id/gramToOzBtn" />

    <Button
        android:id="@+id/m2ToFeet2Btn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/m2_to_foot2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/celsToFarBtn"
        app:layout_constraintTop_toBottomOf="@+id/lbsToKgBtn" />

    <Button
        android:id="@+id/kmToMileBtn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/km_to_mile"
        app:layout_constraintEnd_toStartOf="@+id/mToYardBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/litToGalBtn" />

    <Button
        android:id="@+id/mToYardBtn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/m_to_yard"
        app:layout_constraintEnd_toStartOf="@+id/cmToInchBtn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/kmToMileBtn"
        app:layout_constraintTop_toBottomOf="@+id/celsToFarBtn" />

    <Button
        android:id="@+id/cmToInchBtn"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/cm_to_inch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mToYardBtn"
        app:layout_constraintTop_toBottomOf="@+id/m2ToFeet2Btn" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cmToInchBtn"
        app:srcCompat="@android:drawable/ic_media_rew" />
</android.support.constraint.ConstraintLayout>